--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@solana/pay": "^0.2.5",
+    "@solana/web3.js": "^1.87.1",
     "bcrypt": "^5.1.0",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "~0.5.1",
