chore: types for build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,9 @@
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
-  ]
+  ],
+  "types": [
+      "node",
+      "webpack-env" // here
+    ]
 }
