--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "yarn": "1.22.18"
+    "yarn": "1.22.18",
+    "node" : ">=18.18.0 <19.0.0" 
   },
   "scripts": {
     "build:prod": "tsc -p tsconfig.build.json",
